tests/baselines/reference/destructuringParameterDeclaration2.errors.txt
destructuringParameterDeclaration2.ts(7,8): error TS2322: Type 'string' is not assignable to type 'number'.
destructuringParameterDeclaration2.ts(7,29): error TS1005: ',' expected.
destructuringParameterDeclaration2.ts(8,4): error TS2345: Argument of type '[number, number, string[][], string]' is not assignable to parameter of type '[number, number, string[][]]'.
  Source has 4 element(s) but target allows only 3.
destructuringParameterDeclaration2.ts(16,5): error TS7010: 'b0', which lacks return-type annotation, implicitly has an 'any' return type.
destructuringParameterDeclaration2.ts(16,8): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
destructuringParameterDeclaration2.ts(16,16): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
destructuringParameterDeclaration2.ts(23,4): error TS2345: Argument of type '"string"' is not assignable to parameter of type 'null | undefined'.
destructuringParameterDeclaration2.ts(26,18): error TS7031: Binding element 'x' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(26,25): error TS7031: Binding element 'j' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(30,14): error TS2300: Duplicate identifier 'z'.
destructuringParameterDeclaration2.ts(30,14): error TS7031: Binding element 'z' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(30,18): error TS2300: Duplicate identifier 'z'.
destructuringParameterDeclaration2.ts(31,14): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(31,17): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(31,22): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(32,14): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(32,17): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(34,6): error TS2322: Type 'number' is not assignable to type '{ x: any; y: { j: any; }; }'.
destructuringParameterDeclaration2.ts(35,4): error TS2345: Argument of type '{}' is not assignable to parameter of type '{ z: number; }'.
  Property 'z' is missing in type '{}' but required in type '{ z: number; }'.
destructuringParameterDeclaration2.ts(36,6): error TS2322: Type 'boolean' is not assignable to type 'number'.
destructuringParameterDeclaration2.ts(37,6): error TS2322: Type 'boolean' is not assignable to type 'number'.
destructuringParameterDeclaration2.ts(38,6): error TS2322: Type 'boolean' is not assignable to type 'string | number'.
destructuringParameterDeclaration2.ts(39,11): error TS2322: Type 'boolean' is not assignable to type '[[any]]'.
destructuringParameterDeclaration2.ts(40,13): error TS2322: Type 'string' is not assignable to type 'number'.
destructuringParameterDeclaration2.ts(46,13): error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
destructuringParameterDeclaration2.ts(46,14): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(46,17): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(46,20): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(47,13): error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
destructuringParameterDeclaration2.ts(47,14): error TS7031: Binding element 'x' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(47,17): error TS7031: Binding element 'y' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(47,20): error TS7031: Binding element 'z' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(50,5): error TS7010: 'd3', which lacks return-type annotation, implicitly has an 'any' return type.
destructuringParameterDeclaration2.ts(50,9): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(50,12): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(50,15): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(51,5): error TS7010: 'd4', which lacks return-type annotation, implicitly has an 'any' return type.
destructuringParameterDeclaration2.ts(51,9): error TS7031: Binding element 'x' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(51,12): error TS7031: Binding element 'y' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(51,15): error TS7031: Binding element 'z' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(52,5): error TS7010: 'e0', which lacks return-type annotation, implicitly has an 'any' return type.
destructuringParameterDeclaration2.ts(52,9): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(52,12): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(52,15): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(56,8): error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
destructuringParameterDeclaration2.ts(56,9): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(56,12): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(56,15): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(57,5): error TS2416: Property 'd4' in type 'C4' is not assignable to the same property in base type 'F2'.
  Type '({ x, y, c }: { x: any; y: any; c: any; }) => void' is not assignable to type '({ x, y, z }?: { x: any; y: any; z: any; }) => any'.
    Types of parameters '__0' and '__0' are incompatible.
      Type '{ x: any; y: any; z: any; } | undefined' is not assignable to type '{ x: any; y: any; c: any; }'.
        Type 'undefined' is not assignable to type '{ x: any; y: any; c: any; }'.
destructuringParameterDeclaration2.ts(57,9): error TS7031: Binding element 'x' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(57,12): error TS7031: Binding element 'y' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(57,15): error TS7031: Binding element 'c' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(58,9): error TS7031: Binding element 'a' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(58,12): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(58,15): error TS7031: Binding element 'q' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(65,18): error TS2300: Duplicate identifier 'number'.
destructuringParameterDeclaration2.ts(65,18): error TS7031: Binding element 'number' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(65,26): error TS2300: Duplicate identifier 'number'.
destructuringParameterDeclaration2.ts(65,26): error TS7031: Binding element 'number' implicitly has an 'any' type.
destructuringParameterDeclaration2.ts(65,34): error TS2300: Duplicate identifier 'number'.
destructuringParameterDeclaration2.ts(65,34): error TS7031: Binding element 'number' implicitly has an 'any' type.


==== destructuringParameterDeclaration2.ts (61 errors) ====
    // A parameter declaration may specify either an identifier or a binding pattern.
    // The identifiers specified in parameter declarations and binding patterns
    // in a parameter list must be unique within that parameter list.
    
    // If the declaration includes a type annotation, the parameter is of that type
    function a0([a, b, [[c]]]: [number, number, string[][]]) { }
    a0([1, "string", [["world"]]);      // Error
           ~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
                                ~
!!! error TS1005: ',' expected.
    a0([1, 2, [["world"]], "string"]);  // Error
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[number, number, string[][], string]' is not assignable to parameter of type '[number, number, string[][]]'.
!!! error TS2345:   Source has 4 element(s) but target allows only 3.
    
    
    // If the declaration includes an initializer expression (which is permitted only
    // when the parameter list occurs in conjunction with a function body),
    // the parameter type is the widened form (section 3.11) of the type of the initializer expression.
    
    interface F1 {
        b0(z = 10, [[a, b], d, {u}] = [[1, 2], "string", { u: false }]);  // Error, no function body
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'b0', which lacks return-type annotation, implicitly has an 'any' return type.
           ~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    }
    
    function b1(z = null, o = { x: 0, y: undefined }) { }
    function b2([a, z, y] = [undefined, null, undefined]) { }
    function b3([[a], b, [[c, d]]] = [[undefined], undefined, [[undefined, undefined]]]) { }
    
    b1("string", { x: "string", y: true });  // Error
       ~~~~~~~~
!!! error TS2345: Argument of type '"string"' is not assignable to parameter of type 'null | undefined'.
    
    // If the declaration specifies a binding pattern, the parameter type is the implied type of that binding pattern (section 5.1.3)
    function c0({z: {x, y: {j}}}) { }
                     ~
!!! error TS7031: Binding element 'x' implicitly has an 'any' type.
                            ~
!!! error TS7031: Binding element 'j' implicitly has an 'any' type.
    function c1({z} = { z: 10 }) { }
    function c2({z = 10}) { }
    function c3({b}: { b: number|string } = { b: "hello" }) { }
    function c4([z], z: number) { }  // Error Duplicate identifier
                 ~
!!! error TS2300: Duplicate identifier 'z'.
                 ~
!!! error TS7031: Binding element 'z' implicitly has an 'any' type.
                     ~
!!! error TS2300: Duplicate identifier 'z'.
    function c5([a, b, [[c]]]) { }
                 ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
                    ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                         ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
    function c6([a, b, [[c = 1]]]) { }
                 ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
                    ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
    
    c0({ z: 1 });      // Error, implied type is { z: {x: any, y: {j: any}} }
         ~
!!! error TS2322: Type 'number' is not assignable to type '{ x: any; y: { j: any; }; }'.
    c1({});            // Error, implied type is {z:number}?
       ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type '{ z: number; }'.
!!! error TS2345:   Property 'z' is missing in type '{}' but required in type '{ z: number; }'.
!!! related TS2728 destructuringParameterDeclaration2.ts:27:21: 'z' is declared here.
    c1({ z: true });   // Error, implied type is {z:number}?
         ~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
    c2({ z: false });  // Error, implied type is {z?: number}
         ~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
    c3({ b: true });   // Error, implied type is { b: number|string }. 
         ~
!!! error TS2322: Type 'boolean' is not assignable to type 'string | number'.
    c5([1, 2, false, true]);   // Error, implied type is [any, any, [[any]]]
              ~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type '[[any]]'.
    c6([1, 2, [["string"]]]);  // Error, implied type is [any, any, [[number]]]  // Use initializer
                ~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    // A parameter can be marked optional by following its name or binding pattern with a question mark (?)
    // or by including an initializer.  Initializers (including binding property or element initializers) are
    // permitted only when the parameter list occurs in conjunction with a function body
    
    function d1([a, b, c]?) { }  // Error, binding pattern can't be optional in implementation signature
                ~~~~~~~~~~
!!! error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
                 ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
                    ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                       ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
    function d2({x, y, z}?) { }  // Error, binding pattern can't be optional in implementation signature
                ~~~~~~~~~~
!!! error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
                 ~
!!! error TS7031: Binding element 'x' implicitly has an 'any' type.
                    ~
!!! error TS7031: Binding element 'y' implicitly has an 'any' type.
                       ~
!!! error TS7031: Binding element 'z' implicitly has an 'any' type.
    
    interface F2 {
        d3([a, b, c]?);
        ~~~~~~~~~~~~~~~
!!! error TS7010: 'd3', which lacks return-type annotation, implicitly has an 'any' return type.
            ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
        d4({x, y, z}?);
        ~~~~~~~~~~~~~~~
!!! error TS7010: 'd4', which lacks return-type annotation, implicitly has an 'any' return type.
            ~
!!! error TS7031: Binding element 'x' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'y' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'z' implicitly has an 'any' type.
        e0([a, b, c]);
        ~~~~~~~~~~~~~~
!!! error TS7010: 'e0', which lacks return-type annotation, implicitly has an 'any' return type.
            ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
    }
    
    class C4 implements F2 {
        d3([a, b, c]?) { }  // Error, binding pattern can't be optional in implementation signature
           ~~~~~~~~~~
!!! error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
            ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
        d4({x, y, c}) { }
        ~~
!!! error TS2416: Property 'd4' in type 'C4' is not assignable to the same property in base type 'F2'.
!!! error TS2416:   Type '({ x, y, c }: { x: any; y: any; c: any; }) => void' is not assignable to type '({ x, y, z }?: { x: any; y: any; z: any; }) => any'.
!!! error TS2416:     Types of parameters '__0' and '__0' are incompatible.
!!! error TS2416:       Type '{ x: any; y: any; z: any; } | undefined' is not assignable to type '{ x: any; y: any; c: any; }'.
!!! error TS2416:         Type 'undefined' is not assignable to type '{ x: any; y: any; c: any; }'.
            ~
!!! error TS7031: Binding element 'x' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'y' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
        e0([a, b, q]) { }
            ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
                  ~
!!! error TS7031: Binding element 'q' implicitly has an 'any' type.
    }
    
    // Destructuring parameter declarations do not permit type annotations on the individual binding patterns,
    // as such annotations would conflict with the already established meaning of colons in object literals.
    // Type annotations must instead be written on the top- level parameter declaration
    
    function e0({x: [number, number, number]}) { }  // error, duplicate identifier;
                     ~~~~~~
!!! error TS2300: Duplicate identifier 'number'.
                     ~~~~~~
!!! error TS7031: Binding element 'number' implicitly has an 'any' type.
                             ~~~~~~
!!! error TS2300: Duplicate identifier 'number'.
                             ~~~~~~
!!! error TS7031: Binding element 'number' implicitly has an 'any' type.
                                     ~~~~~~
!!! error TS2300: Duplicate identifier 'number'.
                                     ~~~~~~
!!! error TS7031: Binding element 'number' implicitly has an 'any' type.
    
    
    